# aimo3-recipe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-runpod.txt  setup_env.sh  setup_runpod.sh
aimo3_recipe/: __init__.py
aimo3_recipe/data/: __init__.py  datasets.py  preprocessing.py  renderers.py
aimo3_recipe/evaluation/: __init__.py  answer_extraction.py  benchmarks.py  evaluate.py  evaluate_all.py  poll_and_evaluate.py
aimo3_recipe/inference/: __init__.py  generate.py  solution_selection.py  tir_executor.py
aimo3_recipe/training/: __init__.py  rl_math.py  sft_cot.py  sft_tir.py  tinker_rl_math.py  tinker_rl_math_local.py  tinker_sft_math.py  train.py
aimo3_recipe/utils/: __init__.py  code_execution.py  math_utils.py  safe_paths.py
configs/: eval.yaml  tinker_train.yaml  train_qwen_14b.yaml
scripts/: evaluate_all.py  evaluate_all_benchmarks.sh  evaluate_checkpoints.py  regenerate_summary.py  run_full_pipeline.sh  run_tinker_pipeline.sh  runpod_bootstrap.sh
tests/: conftest.py  test_safe_paths.py  test_tinker_rl_math.py
